@@ -1,6 +1,9 @@
 2009.05.14 Kentaro FUKUCHI <fukuchi@megaui.net>
 	* qrinput.c, qrencode.c, qrspe.c:
 	  - More return value checks. Mainly for ENOMEM error.
+	* qrspe.[ch], qrencode.c, tests/test_qrspec.c:
+	  - QRspec_getEccSpec() now accepts an int array instead to return multiple
+	    values instead of returning dynamic allocated array.
 
 2009.05.12 Kentaro FUKUCHI <fukuchi@megaui.net>
 	* bitstream.c:
